feature: specify key file per directory set
Restructures config file. Directory sets are no longer defined in the config root but in their own namespace.

--- a/config.json
+++ b/config.json
@@ -1,7 +1,16 @@
 {
-  "DEFAULT": {
-    "localSend": "",
-    "localReceive": "",
-    "remote": ""
+  "defaultKeyFile": "key.json",
+  "directorySets": {
+    "DEFAULT": {
+      "localSend": "",
+      "localReceive": "",
+      "remote": ""
+    },
+    "example1": {
+      "keyFile": "key2.json",
+      "localSend": "",
+      "localReceive": "",
+      "remote": ""
+    }
   }
 }
